<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gnss_compass_driver</name>
  <version>1.0.0</version>
  <description>
    Professional ROS2 driver for dual-antenna GNSS receivers with RTK support.
    Features true heading, centimeter positioning, built-in NTRIP client.
    Supports NMEA, UBX (u-blox), and UniCore protocols.
  </description>
  
  <maintainer email="davutcanakbas@gmail.com">Davut Can Akbas</maintainer>
  <license>Apache-2.0</license>
  
  <url type="website">https://github.com/davutcanakbas/gnss_compass_ros2</url>
  <url type="repository">https://github.com/davutcanakbas/gnss_compass_ros2</url>
  <url type="bugtracker">https://github.com/davutcanakbas/gnss_compass_ros2/issues</url>
  
  <author email="davutcanakbas@gmail.com">Davut Can Akbas</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 Core -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  
  <!-- Message Types -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>builtin_interfaces</depend>
  
  <!-- TF2 -->
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Custom Messages (if needed later) -->
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  
  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

